Replay day rate information in new flow

--- a/frameworks/digital-outcomes-and-specialists/manifests/new_edit_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/new_edit_brief_response.yml
@@ -11,10 +11,10 @@
     - newAvailabilityOutcomes
 
 -
-  name: Day rate
+  name: How much you charge per day
   editable: True
   questions:
-    - dayRate
+    - newDayRate
 
 -
   name: Do you have all the essential skills and experience?
