Add contact email address question to new flow

--- a/frameworks/digital-outcomes-and-specialists/manifests/new_edit_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/new_edit_brief_response.yml
@@ -29,7 +29,7 @@
     - niceToHaveRequirements
 
 -
-  name: Respond to email address
+  name: Email address the buyer should use to contact you
   editable: True
   questions:
-    - respondToEmailAddress
+    - newRespondToEmailAddress
