--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirementsMet.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirementsMet.yml
@@ -8,6 +8,7 @@ question_advice: >
   </ul>
 
 type: boolean
+required_value: true
 
 depends:
   - "on": "lot"
@@ -15,3 +16,10 @@ depends:
       - digital-outcomes
       - digital-specialists
       - user-research-participants
+validations:
+  -
+    name: not_required_value
+    message: 'You need to be able to provide all the essential requirements.'
+  -
+    name: answer_required
+    message: 'You need to answer this question.'
