Update day rate name in edit_brief_response manifest

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
@@ -11,7 +11,7 @@
     - newAvailabilityOutcomes
 
 -
-  name: How much you charge per day
+  name: How much you charge each day
   editable: True
   questions:
     - newDayRate
