Add fullstops to day rate question advice

--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/newAvailabilitySpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/newAvailabilitySpecialists.yml
@@ -2,7 +2,7 @@ name: Earliest start date
 id: availability
 question: When is the earliest the specialist can start work?
 hint: 'eg 31/12/2016'
-question_advice: The buyer needs the specialist to start by {{ brief.startDate }}
+question_advice: The buyer needs the specialist to start by {{ brief.startDate }}.
 type: text
 smaller: true
 depends:
