Prefix current brief response flow questions with "legacy"
Note, have not done this for essentialRequirements or
niceToHaveRequirements because not yet clear if these will need
to have two versions of the question because the question type
is changing rather than the question and so the two versions
may not have clashing filenames.

--- a/frameworks/digital-outcomes-and-specialists/manifests/legacy_edit_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/legacy_edit_brief_response.yml
@@ -3,9 +3,9 @@
   editable: True
   description: "{% if lot == 'digital-specialists' %}You can only offer 1 specialist for this opportunity. {% endif %}Buyers will use the information suppliers provide here to create a shortlist."
   questions:
-    - respondToEmailAddress
+    - legacyRespondToEmailAddress
     - essentialRequirements
     - niceToHaveRequirements
-    - availabilityOutcomes
-    - availabilitySpecialists
-    - dayRate
+    - legacyAvailabilityOutcomes
+    - legacyAvailabilitySpecialists
+    - legacyDayRate
