--- a/frameworks/digital-outcomes-and-specialists/manifests/output_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/output_brief_response.yml
@@ -2,8 +2,8 @@
   name: View response to requirements
   questions:
     - supplierName
-    - availabilityOutcomes
-    - availabilitySpecialists
-    - dayRate
+    - legacyAvailabilityOutcomes
+    - legacyAvailabilitySpecialists
+    - legacyDayRate
     - niceToHaveRequirements
-    - respondToEmailAddress
+    - legacyRespondToEmailAddress
