--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/legacyRespondToEmailAddress.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/legacyRespondToEmailAddress.yml
@@ -1,4 +1,5 @@
 name: Email address
+id: respondToEmailAddress
 question: Email address the buyer should use to contact you
 hint: All communication about your application will be sent to this address.
 
