--- a/frameworks/digital-outcomes-and-specialists/manifests/display_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/display_brief_response.yml
@@ -9,7 +9,7 @@
 -
   name: Your details
   questions:
-    - dayRate
-    - availabilityOutcomes
-    - availabilitySpecialists
-    - respondToEmailAddress
+    - legacyDayRate
+    - legacyAvailabilityOutcomes
+    - legacyAvailabilitySpecialists
+    - legacyRespondToEmailAddress
