Add missing question mark to new day rate question

--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/availabilityOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/availabilityOutcomes.yml
@@ -1,6 +1,6 @@
 name: Earliest start date
 id: availability
-question: When is the earliest the team can start
+question: When is the earliest the team can start?
 hint: 'eg 31/12/2016'
 question_advice: The buyer needs the team to start by {{ brief.startDate }}.
 type: text
