--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/dayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/dayRate.yml
@@ -1,6 +1,6 @@
 name: Day rate
 question: What’s the specialist’s day rate?
-question_advice: "{% if brief.budgetRange is defined %}<h2>Buyer's maximum day rate:</h2><p>{{ brief.budgetRange }}</p>{% endif %}<h2>Your maximum day rate:</h2><p>£{{ max_day_rate }}</p>"
+question_advice: "{% if 'budgetRange' in brief %}<h2>Buyer's maximum day rate:</h2><p>{{ brief.budgetRange }}</p>{% endif %}<h2>Your maximum day rate:</h2><p>£{{ max_day_rate }}</p>"
 type: pricing
 fields:
   price: dayRate
