--- a/frameworks/g-cloud-8/questions/services/analyticsNetworkMetrics.yml
+++ b/frameworks/g-cloud-8/questions/services/analyticsNetworkMetrics.yml
@@ -1,4 +1,5 @@
-question: 'Do you provide network metrics (eg bandwidth data)?'
+question: 'Do you provide network metrics?'
+hint: Network metrics can include bandwidth data.
 depends:
   -
     "on": lot
