--- a/frameworks/g-cloud-8/questions/services/cloudBackupManual.yml
+++ b/frameworks/g-cloud-8/questions/services/cloudBackupManual.yml
@@ -1,4 +1,4 @@
-question: 'Do you allow users to manually backup files?'
+question: 'Can users control when backups happen?'
 depends:
   -
     "on": lot
