--- a/frameworks/g-cloud-8/questions/services/cloudBackupScheduled.yml
+++ b/frameworks/g-cloud-8/questions/services/cloudBackupScheduled.yml
@@ -1,4 +1,4 @@
-question: 'Do you allow users to schedule backups?'
+question: 'Does your product back up data automatically?'
 depends:
   -
     "on": lot
