--- a/frameworks/g-cloud-8/questions/services/cloudRecoverSelfservice.yml
+++ b/frameworks/g-cloud-8/questions/services/cloudRecoverSelfservice.yml
@@ -1,4 +1,4 @@
-question: 'Is there way for users recover their own data?'
+question: 'Can users recover their own data?'
 depends:
   -
     "on": lot
