--- a/frameworks/g-cloud-8/questions/services/cloudScaleAutomatic.yml
+++ b/frameworks/g-cloud-8/questions/services/cloudScaleAutomatic.yml
@@ -1,4 +1,4 @@
-question: 'Do you provide automatic cloud environment scaling?'
+question: 'Does your cloud environment scale automatically?'
 depends:
   -
     "on": lot
