--- a/frameworks/g-cloud-8/questions/services/devolved.yml
+++ b/frameworks/g-cloud-8/questions/services/devolved.yml
@@ -1,4 +1,5 @@
 question: 'Do you connect to any devolved networks?'
+hint: Devolved networks could be Scottish or Welsh.
 depends:
   -
     "on": lot
