--- a/frameworks/g-cloud-8/questions/services/provisionCommandline.yml
+++ b/frameworks/g-cloud-8/questions/services/provisionCommandline.yml
@@ -1,4 +1,4 @@
-question: 'Can users set up and start using your product using a command line interface?'
+question: 'Can users set up and use your product using the command line?'
 depends:
   -
     "on": lot
