--- a/frameworks/g-cloud-8/questions/services/analyticsOtherDetail.yml
+++ b/frameworks/g-cloud-8/questions/services/analyticsOtherDetail.yml
@@ -13,7 +13,7 @@ depends:
       - scs
 type: textbox_large
 hidden: True
-hint: '50 word limit'
+hint: '50-word limit'
 max_length_in_words: 50
 validations:
   -
