--- a/frameworks/g-cloud-8/questions/services/cloudScaleSelfserviceDetails.yml
+++ b/frameworks/g-cloud-8/questions/services/cloudScaleSelfserviceDetails.yml
@@ -1,4 +1,4 @@
-question: 'Describe the self service cloud environment scaling.'
+question: 'Describe how users manage how the cloud environment scales.'
 depends:
   -
     "on": lot
@@ -13,7 +13,7 @@ depends:
       - scs
 type: textbox_large
 hidden: True
-hint: '50 word limit'
+hint: '50-word limit'
 max_length_in_words: 50
 validations:
   -
