--- a/frameworks/g-cloud-8/questions/services/provisionOther.yml
+++ b/frameworks/g-cloud-8/questions/services/provisionOther.yml
@@ -1,4 +1,4 @@
-question: 'Can users set up and start using your product using in an other way?'
+question: 'Can users set up and use your product in another way?'
 depends:
   -
     "on": lot
