--- a/frameworks/g-cloud-8/questions/services/serviceBenefits.yml
+++ b/frameworks/g-cloud-8/questions/services/serviceBenefits.yml
@@ -1,4 +1,4 @@
-question: 'Product benefits'
+question: 'List the product’s benefits.'
 hint: >
     Include benefits that show how your product helps users improve their business. Use active phrases, eg publish content from multiple devices, quickly manage content on the move.  This content will be indexed by search. Using additional keywords may impact your acceptance on to the Digital Marketplace. Read the [guidance on writing good product descriptions](https://digitalmarketplace.blog.gov.uk/2014/10/21/digital-marketplace-content-its-all-change/). (Maximum 10 words per benefit. Maximum 10 benefits.)
 depends:
