--- a/frameworks/g-cloud-8/questions/services/serviceConstraints.yml
+++ b/frameworks/g-cloud-8/questions/services/serviceConstraints.yml
@@ -1,6 +1,4 @@
-question: 'What are the constraints of your product?'
-hint: >
-    Include the technical constraints of your product, eg real-time reporting, remote access. This content will be indexed by search. Using additional keywords may impact your acceptance on to the Digital Marketplace. Read the [guidance on writing good service descriptions](https://digitalmarketplace.blog.gov.uk/2014/10/21/digital-marketplace-content-its-all-change/). (Maximum 10 words per feature. Maximum 10 constraints.)
+question: 'Does your product have any constraints that buyers should know about?'
 depends:
   -
     "on": lot
@@ -13,18 +11,16 @@ depends:
       - iaas
       - SCS
       - scs
-list_item_name: 'product constraints'
-type: list
+type: textbox_large
+hint: '50-word limit'
+max_length_in_words: 50
 validations:
   -
     name: answer_required
     message: 'You need to answer this question.'
   -
-    name: under_10_words
-    message: 'Each feature must be no more than 10 words.'
-  -
-    name: max_items_limit
-    message: 'You must have 10 or fewer constraints.'
+    name: under_50_words
+    message: 'Your description must be no more than 50 words.'
   -
     name: under_character_limit
-    message: 'Each feature must be no more than 100 characters.'
+    message: 'Your description must be no more than 500 characters.'
