--- a/frameworks/digital-outcomes-and-specialists-2/questions/briefs/numberOfSuppliersOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/briefs/numberOfSuppliersOutcomes.yml
@@ -22,4 +22,4 @@ validations:
   - name: not_a_number
     message: 'You must evaluate at least 3, and no more than 15, suppliers.'
 
-empty_message: Set maximum number of suppliers you’ll evaluate
+empty_message: Set how many suppliers to evaluate
