--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirementsMet.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirementsMet.yml
@@ -1,4 +1,4 @@
-name: Essential requirements
+name: Essential skills and experience
 question: Do you have all the essential skills and experience?
 question_advice: >
   <ul class="list-bullet">
@@ -19,7 +19,7 @@ depends:
 validations:
   -
     name: not_required_value
-    message: 'You need to be able to provide all the essential requirements.'
+    message: 'To carry on with your application, you need to show you meet all the essential skills and experience.'
   -
     name: answer_required
     message: 'You need to answer this question.'
