--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirementsMet.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirementsMet.yml
@@ -19,7 +19,7 @@ depends:
 validations:
   -
     name: not_required_value
-    message: 'To carry on with your application, you need to show you meet all the essential skills and experience.'
+    message: 'To carry on with your application, you need to show you have all the essential skills and experience.'
   -
     name: answer_required
     message: 'You need to answer this question.'
