--- a/frameworks/g-cloud-7/manifests/edit_service_as_admin.yml
+++ b/frameworks/g-cloud-7/manifests/edit_service_as_admin.yml
@@ -5,11 +5,18 @@
     - id
     - lotName
 -
-  name: Description
+  name: Service information
   editable: true
   questions:
     - serviceName
     - serviceSummary
+-
+  name: Service type
+  editable: true
+  questions:
+    - serviceTypesIaaS
+    - serviceTypesSaaS
+    - serviceTypesSCS
 -
   name: Features and benefits
   editable: true
@@ -23,18 +30,14 @@
     - priceString
     - vatIncluded
     - educationPricing
-    - terminationCost
     - trialOption
     - freeOption
-    - minimumContractPeriod
 -
-  name: Documents
+  name: Terms and conditions
   editable: true
   questions:
-    - serviceDefinitionDocumentURL
-    - termsAndConditionsDocumentURL
-    - sfiaRateDocumentURL
-    - pricingDocumentURL
+    - terminationCost
+    - minimumContractPeriod
 -
   name: Support
   editable: True
@@ -44,3 +47,195 @@
     - supportAvailability
     - supportResponseTime
     - incidentEscalation
+-
+  name: Open standards
+  editable: True
+  questions:
+    - openStandardsSupported
+-
+  name: Onboarding and offboarding
+  editable: True
+  questions:
+    - serviceOnboarding
+    - serviceOffboarding
+-
+  name: Analytics
+  editable: True
+  questions:
+    - analyticsAvailable
+-
+  name: Cloud features
+  editable: True
+  questions:
+    - elasticCloud
+    - guaranteedResources
+    - persistentStorage
+-
+  name: Provisioning
+  editable: True
+  questions:
+    - selfServiceProvisioning
+    - provisioningTime
+    - deprovisioningTime
+-
+  name: Code
+  editable: True
+  questions:
+    - openSource
+    - codeLibraryLanguages
+-
+  name: API access
+  editable: True
+  questions:
+    - apiAccess
+    - apiType
+-
+  name: Networks and access
+  editable: True
+  questions:
+    - networksConnected
+    - supportedBrowsers
+    - offlineWorking
+    - supportedDevices
+-
+  name: Certifications and standards
+  editable: True
+  questions:
+    - vendorCertifications
+    - identityStandards
+-
+  name: Data storage
+  editable: True
+  questions:
+    - datacentresEUCode
+    - datacentresSpecifyLocation
+    - datacentreTier
+    - dataBackupRecovery
+    - dataExtractionRemoval
+-
+  name: Data-in-transit protection
+  editable: True
+  questions:
+    - dataProtectionBetweenUserAndService
+    - dataProtectionWithinService
+    - dataProtectionBetweenServices
+-
+  name: Asset protection and resilience
+  editable: True
+  questions:
+    - datacentreLocations
+    - dataManagementLocations
+    - legalJurisdiction
+    - datacentreProtectionDisclosure
+    - dataAtRestProtections
+    - dataSecureDeletion
+    - dataStorageMediaDisposal
+    - dataSecureEquipmentDisposal
+    - dataRedundantEquipmentAccountsRevoked
+    - serviceAvailabilityPercentage
+-
+  name: Separation between consumers
+  editable: True
+  questions:
+    - cloudDeploymentModel
+    - otherConsumers
+    - servicesSeparation
+    - servicesManagementSeparation
+-
+  name: Governance
+  editable: True
+  questions:
+    - governanceFramework
+-
+  name: Configuration and change management
+  editable: True
+  questions:
+    - configurationTracking
+    - changeImpactAssessment
+-
+  name: Vulnerability management
+  editable: True
+  questions:
+    - vulnerabilityAssessment
+    - vulnerabilityMonitoring
+    - vulnerabilityMitigationPrioritisation
+    - vulnerabilityTracking
+    - vulnerabilityTimescales
+-
+  name: Events and Incidents
+  editable: True
+  questions:
+    - eventMonitoring
+    - incidentManagementProcess
+    - incidentManagementReporting
+    - incidentDefinitionPublished
+-
+  name: Personnel security
+  editable: True
+  questions:
+    - personnelSecurityChecks
+-
+  name: Secure development
+  editable: True
+  questions:
+    - secureDevelopment
+    - secureDesign
+    - secureConfigurationManagement
+-
+  name: Supply-chain security
+  editable: True
+  questions:
+    - thirdPartyDataSharingInformation
+    - thirdPartySecurityRequirements
+    - thirdPartyRiskAssessment
+    - thirdPartyComplianceMonitoring
+    - hardwareSoftwareVerification
+-
+  name: Authentication of consumers
+  editable: True
+  questions:
+    - userAuthenticateManagement
+    - userAuthenticateSupport
+-
+  name: Separation and access control within management interfaces
+  editable: True
+  questions:
+    - userAccessControlManagement
+    - restrictAdministratorPermissions
+    - managementInterfaceProtection
+-
+  name: Identity and authentication
+  editable: True
+  questions:
+    - identityAuthenticationControls
+-
+  name: External interface protection
+  editable: True
+  questions:
+    - onboardingGuidance
+    - interconnectionMethods
+-
+  name: Secure service administration
+  editable: True
+  questions:
+    - serviceManagementModel
+-
+  name: Audit information provision to consumers
+  editable: True
+  questions:
+    - auditInformationProvided
+-
+  name: Secure use of the service by the customer
+  editable: True
+  questions:
+    - deviceAccessMethod
+    - serviceConfigurationGuidance
+    - trainingProvided
+-
+  name: Documents
+  editable: true
+  questions:
+    - serviceDefinitionDocumentURL
+    - termsAndConditionsDocumentURL
+    - pricingDocumentURL
+    - sfiaRateDocumentURL
