Add essentialsRequirements dynamic list question
This replaces the old essentialRequirements question (which has
been marked as legacy as it is still used).

--- a/frameworks/digital-outcomes-and-specialists/manifests/display_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/display_brief_response.yml
@@ -1,7 +1,7 @@
 -
   name: Your essential skills and experience
   questions:
-    - essentialRequirements
+    - legacyEssentialRequirements
 -
   name: Your nice-to-have skills and experience
   questions:
