--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
@@ -6,5 +6,6 @@
     - availabilityOutcomes
     - dayRate
     - essentialRequirementsMet
+    - essentialRequirements
     - niceToHaveRequirements
     - respondToEmailAddress
