--- a/frameworks/digital-outcomes-and-specialists/manifests/legacy_edit_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/legacy_edit_brief_response.yml
@@ -4,7 +4,7 @@
   description: "{% if lot == 'digital-specialists' %}You can only offer 1 specialist for this opportunity. {% endif %}Buyers will use the information suppliers provide here to create a shortlist."
   questions:
     - legacyRespondToEmailAddress
-    - essentialRequirements
+    - legacyEssentialRequirements
     - niceToHaveRequirements
     - legacyAvailabilityOutcomes
     - legacyAvailabilitySpecialists
