--- a/frameworks/digital-outcomes-and-specialists/manifests/display_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/display_brief_response.yml
@@ -5,7 +5,7 @@
 -
   name: Your nice-to-have skills and experience
   questions:
-    - niceToHaveRequirements
+    - legacyNiceToHaveRequirements
 -
   name: Your details
   questions:
