--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
@@ -7,5 +7,5 @@
     - dayRate
     - essentialRequirementsMet
     - essentialRequirements
-    - niceToHaveRequirements
+    - legacyNiceToHaveRequirements
     - respondToEmailAddress
