--- a/frameworks/digital-outcomes-and-specialists/manifests/legacy_edit_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/legacy_edit_brief_response.yml
@@ -5,7 +5,7 @@
   questions:
     - legacyRespondToEmailAddress
     - legacyEssentialRequirements
-    - niceToHaveRequirements
+    - legacyNiceToHaveRequirements
     - legacyAvailabilityOutcomes
     - legacyAvailabilitySpecialists
     - legacyDayRate
