--- a/frameworks/digital-outcomes-and-specialists/manifests/output_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/output_brief_response.yml
@@ -5,5 +5,5 @@
     - legacyAvailabilityOutcomes
     - legacyAvailabilitySpecialists
     - legacyDayRate
-    - niceToHaveRequirements
+    - legacyNiceToHaveRequirements
     - legacyRespondToEmailAddress
