update questions for ODS file

--- a/frameworks/digital-outcomes-and-specialists-2/questions/brief-responses/availabilitySpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/brief-responses/availabilitySpecialists.yml
@@ -1,4 +1,4 @@
-name: Date the specialist can start work
+name: Earliest start date
 id: availability
 question: When can the specialist start work?
 hint: 'eg 31/12/2020'
