--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirements.yml
@@ -1,4 +1,4 @@
-name: Give evidence of the essential skills and experience
+name: Essential skills and experience
 question: Give evidence of the essential skills and experience
 question_advice: |
   The buyer will assess and score your evidence to shortlist the best suppliers.
