--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/niceToHaveRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/niceToHaveRequirements.yml
@@ -1,4 +1,4 @@
-name: Do you have any of the nice-to-have skills or experience?
+name: Nice-to-have skills and experience
 question: Do you have any of the nice-to-have skills or experience?
 optional: true
 question_advice: |
