--- a/frameworks/digital-outcomes-and-specialists-2/questions/brief-responses/availabilityOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/brief-responses/availabilityOutcomes.yml
@@ -1,4 +1,4 @@
-name: Date the supplier can start work
+name: Earliest start date
 id: availability
 question: When can the supplier start work?
 hint: 'eg 31/12/2020'
