--- a/frameworks/digital-outcomes-and-specialists-2/questions/brief-responses/essentialRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/brief-responses/essentialRequirements.yml
@@ -1,4 +1,4 @@
-name: Essential requirements
+name: Essential skills and experience
 question: Do you have the essential skills and experience?
 question_advice: If you don’t have all the essential skills and experience, you won’t be eligible for this opportunity.
 
