--- a/frameworks/digital-outcomes-and-specialists-2/questions/brief-responses/niceToHaveRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/brief-responses/niceToHaveRequirements.yml
@@ -1,4 +1,4 @@
-name: Nice-to-have requirements
+name: Nice-to-have skills and experience
 question: Do you have any of the nice-to-have skills and experience?
 question_advice: |
   Buyers will filter supplier applications based on the number of nice-to-have skills and experience they have.
