Update validation messages

--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/followupEvidence.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/followupEvidence.yml
@@ -1,4 +1,4 @@
-question: '{{ item }} evidence'
+question: 'Evidence of {{ item }}'
 id: evidence
 type: textbox_large
 max_length_in_words: 100
@@ -6,7 +6,7 @@ hidden: True
 validations:
   -
     name: answer_required
-    message: 'You need to answer this question.'
+    message: 'You must provide evidence if you answer ‘yes’ to this question.'
   -
     name: under_100_words
     message: 'Your answer must be no more than 100 words.'
