--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirementsMet.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirementsMet.yml
@@ -22,4 +22,4 @@ validations:
     message: 'To carry on with your application, you need to show you have all the essential skills and experience.'
   -
     name: answer_required
-    message: 'You need to answer this question.'
+    message: 'You must answer ‘yes’ or ‘no’ to this question.'
