--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/yesNo.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/yesNo.yml
@@ -3,4 +3,4 @@ type: boolean
 followup: evidence
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: 'You must answer ‘yes’ or ‘no’ to this question.'
