Consolidate availability questions for separate lots
Previously we had separate availability questions for specialists and
for outcomes (user research participants didn't have the availablity
question).

The new supplier flow will add an availability question for user
research participants briefs. Using jinja the availability question for
all lots can be condensed to one question with specific content per lot.

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
@@ -2,8 +2,7 @@
   name: Apply for an opportunity
   editable: True
   questions:
-    - availabilitySpecialists
-    - availabilityOutcomes
+    - availability
     - dayRate
     - essentialRequirementsMet
     - essentialRequirements
