Remove confusing content from evidence questions
The essential and nice-to-have evidence questions both referred to their
counterparts evidence type when providing guidance on how much evidence
to provide

Dropping those references makes it less confusing and the advice more
specific to the action in hand.

--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirements.yml
@@ -16,10 +16,10 @@ question_advice: |
     </ul>
   </div>
 
-  You should only provide one example for each essential or nice-to-have requirement (unless the buyer specifies otherwise).
-  
+  You should only provide one example for each essential requirement (unless the buyer specifies otherwise).
+
   You can reuse examples across different essential or nice-to-have requirements if you need to.
-  
+
 type: dynamic_list
 dynamic_field: 'brief.essentialRequirements'
 questions:
