--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/niceToHaveRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/niceToHaveRequirements.yml
@@ -16,7 +16,7 @@ question_advice: |
     </ul>
   </div>
 
-  You should only provide one example for each essential or nice-to-have requirement (unless the buyer specifies otherwise).
+  You should only provide one example for each nice-to-have requirement (unless the buyer specifies otherwise).
 
   You can reuse examples across different essential or nice-to-have requirements if you need to.
 
