Make nice-to-have responses optional
Nice to have requirements are optional for buyers when creating a brief,
as such they should be optional for suppliers when responding.

--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/niceToHaveRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/niceToHaveRequirements.yml
@@ -1,5 +1,6 @@
 name: Do you have any of the nice-to-have skills or experience?
 question: Do you have any of the nice-to-have skills or experience?
+optional: true
 question_advice: |
   All nice-to-have skills and experience are optional.
 
