Add date for DOS2 live

--- a/frameworks/digital-outcomes-and-specialists-2/messages/dates.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/messages/dates.yml
@@ -6,4 +6,4 @@ framework_close_date: '5pm GMT, 14 December 2016'
 
 intention_to_award_date: '16 January 2017'
 
-framework_live_date: ""
+framework_live_date: "February 2017"
