--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/availability.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/availability.yml
@@ -4,11 +4,11 @@ hint: 'eg 31/12/2020'
 question_advice: >
   The buyer needs
   {%- if brief.lotSlug == "digital-outcomes" %}
-  the team to start: {{ brief.startDate }}.
+  the team to start: {{ brief.startDate }}
   {%- elif brief.lotSlug == "digital-specialists" %}
-  the specialist to start: {{ brief.startDate }}.
+  the specialist to start: {{ brief.startDate }}
   {%- else %}
-  participants: {{ brief.researchDates }}.
+  participants: {{ brief.researchDates }}
   {%- endif %}
 type: text
 smaller: true
