looks like a file slipped through the previous rebases and merges for ods stuff, initially there were no changes needed but was subsiquently changed.

--- a/frameworks/digital-outcomes-and-specialists/manifests/output_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/output_brief_response.yml
@@ -2,8 +2,8 @@
   name: View response to requirements
   questions:
     - supplierName
-    - legacyAvailabilityOutcomes
-    - legacyAvailabilitySpecialists
-    - legacyDayRate
-    - legacyNiceToHaveRequirements
-    - legacyRespondToEmailAddress
+    - availability
+    - dayRate
+    - respondToEmailAddress
+    - essentialRequirements
+    - niceToHaveRequirements
