--- a/frameworks/g-cloud-9/manifests/search_filters.yml
+++ b/frameworks/g-cloud-9/manifests/search_filters.yml
@@ -1,37 +1,4 @@
 -
-  name: Categories
+  name: Search filters
   questions:
-    - serviceTypesSCS
-    - serviceTypesSaaS
-    - serviceTypesIaaS
--
-  name: Pricing
-  questions:
-    - freeOption
-    - trialOption
--
-  name: Minimum contract period
-  questions:
-    - minimumContractPeriod
--
-  name: Service management
-  questions:
-    - dataExtractionRemoval
-    - datacentresEUCode
-    - dataBackupRecovery
-    - selfServiceProvisioning
-    - supportForThirdParties
--
-  name: Datacentre tier
-  questions:
-    - datacentreTier
--
-  name: Networks the service is directly connected to
-  questions:
-    - networksConnected
--
-  name: Interoperability
-  questions:
-    - apiAccess
-    - openStandardsSupported
-    - openSource
+    - serviceName
