Add a dummy question to see all the possible things
This will be a useful placeholder to help people decide how they want to tweak how different bits of text are presented.

--- a/frameworks/g-cloud-9/manifests/edit_service.yml
+++ b/frameworks/g-cloud-9/manifests/edit_service.yml
@@ -5,6 +5,11 @@
     - id
     - lotName
 -
+  name: All the things
+  editable:true
+  questions:
+    - allTheThingsToSee
+-
   name: Description
   editable: True
   questions:
