--- a/frameworks/g-cloud-9/manifests/edit_service_as_admin.yml
+++ b/frameworks/g-cloud-9/manifests/edit_service_as_admin.yml
@@ -2,5 +2,5 @@
   name: Description
   editable: true
   questions:
-    - serviceName
-    - serviceSummary
+    - productName
+    - productDescription
