--- a/frameworks/g-cloud-9/questions/services/productName.yml
+++ b/frameworks/g-cloud-9/questions/services/productName.yml
@@ -1,4 +1,6 @@
-hint: 'Include your product name only. Using additional keywords may impact your acceptance on to the Digital Marketplace.'
+question: 'What’s your product called?'
+name: 'Product name'
+hint: 'Include your product name only. Don’t use extra keywords.'
 depends:
   -
     "on": lot
@@ -13,5 +15,4 @@ validations:
     message: 'You need to answer this question.'
   -
     name: under_character_limit
-    message: 'Your service name must be no more than 100 characters.'
-question: 'Service name'
+    message: 'Your product name must be no more than 100 characters.'
