Add placeholder categories questions
These will become the new funky category picker.

--- a/frameworks/g-cloud-9/manifests/edit_submission.yml
+++ b/frameworks/g-cloud-9/manifests/edit_submission.yml
@@ -15,3 +15,6 @@
     - productName
     - productDescription
     - productFeaturesAndBenefits
+    - productCategoriesSoftware
+    - productCategoriesHosting
+    - productCategoriesSupport
