--- a/frameworks/g-cloud-9/manifests/search_filters.yml
+++ b/frameworks/g-cloud-9/manifests/search_filters.yml
@@ -1,4 +1,6 @@
 -
   name: Search filters
   questions:
-    - productCategories
+    - productCategoriesSoftware
+    - productCategoriesHosting
+    - productCategoriesSupport
