Remove textarea - invalid question type
We had a textarea a long time ago but it isn't a valid question type any more.  It hasn't thrown errors to dat because all files using it had a second `type` key of `textbox_large` that replace `textarea` before the JSON schema cheked it.

--- a/frameworks/g-cloud-9/questions/services/productDescription.yml
+++ b/frameworks/g-cloud-9/questions/services/productDescription.yml
@@ -7,7 +7,7 @@ depends:
       - cloud-hosting
       - cloud-software
       - cloud-support
-type: textarea
+type: textbox_large
 max_length_in_words: 50
 validations:
   -
