Add display_brief_response manifest legacy version

--- a/frameworks/digital-outcomes-and-specialists/manifests/display_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/display_brief_response.yml
@@ -1,15 +1,14 @@
 -
   name: Your essential skills and experience
   questions:
-    - legacyEssentialRequirements
+    - essentialRequirements
 -
   name: Your nice-to-have skills and experience
   questions:
-    - legacyNiceToHaveRequirements
+    - niceToHaveRequirements
 -
   name: Your details
   questions:
-    - legacyDayRate
-    - legacyAvailabilityOutcomes
-    - legacyAvailabilitySpecialists
-    - legacyRespondToEmailAddress
+    - dayRate
+    - availability
+    - respondToEmailAddress
