--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/dayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/dayRate.yml
@@ -14,7 +14,7 @@ validations:
     message: 'You need to answer this question.'
   - name: not_money_format
     field: dayRate
-    message: "Day rate must be a number, without units, eg 99.95"
+    message: "Day rate must be in numbers only, no symbols, eg 99.95"
   - name: max_less_than_min
     field: dayRate
     message: "This can't be more than the maximum day rate you've already provided."
