--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/evidence.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/evidence.yml
@@ -4,7 +4,7 @@ max_length_in_words: 100
 validations:
   -
     name: answer_required
-    message: 'You need to answer this question.'
+    message: 'You need to provide evidence.'
   -
     name: under_100_words
     message: 'Your answer must be no more than 100 words.'
