Add serviceName ID to productName question
Our frontend apps use `serviceName` as a special key and expect it for all services.  So although we're calling G9 things "products" they will still need a "serviceName" key.

--- a/frameworks/g-cloud-9/questions/services/productName.yml
+++ b/frameworks/g-cloud-9/questions/services/productName.yml
@@ -1,3 +1,4 @@
+id: serviceName
 question: 'What’s your product called?'
 name: 'Product name'
 hint: 'Include your product name only. Don’t use extra keywords.'
