--- a/frameworks/g-cloud-9/questions/declaration/licenceOrMemberRequired.yml
+++ b/frameworks/g-cloud-9/questions/declaration/licenceOrMemberRequired.yml
@@ -6,5 +6,6 @@ options:
   - label: a member of a relevant organisation
   - label: none of the above
 validations:
-  - name: answer_required
+  - 
+    name: answer_required
     message: You need to answer this question because you answered ‘no’ to [[establishedInTheUK]].
