--- a/frameworks/g-cloud-9/questions/declaration/licenceOrMemberRequiredDetails.yml
+++ b/frameworks/g-cloud-9/questions/declaration/licenceOrMemberRequiredDetails.yml
@@ -3,5 +3,6 @@ question: >
   please give details of the state’s requirements and confirm whether you’ve met them.
 type: text
 validations:
-  - name: answer_required
+  - 
+    name: answer_required
     message: You need to answer this question because you answered ‘licensed’ or ‘a member of a relevant organisation’ in [[licenceOrMemberRequired]].
