--- a/frameworks/g-cloud-9/questions/declaration/mitigatingFactors.yml
+++ b/frameworks/g-cloud-9/questions/declaration/mitigatingFactors.yml
@@ -3,5 +3,6 @@ question: >
   any mitigating factors that you think should be taken into consideration.
 type: textbox_large
 validations:
-  - name: answer_required
+  - 
+    name: answer_required
     message: You need to answer this question because you answered ‘yes’ to one of questions [[taxEvasion]] to [[misleadingInformation]].
